Fix: overflow -x hidden

--- a/gsap_practice/src/index.css
+++ b/gsap_practice/src/index.css
@@ -19,14 +19,12 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
+  overflow-x: hidden;
   min-width: 320px;
   min-height: 100vh;
 }
